--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <nav>
-        <a href="#">Mushrooms</a>
-        <a href="#">Products</a>
-        <a href="#">Recipes</a>
-        <a href="#">Community</a>
+        <a href="html/mushrooms.html">Mushrooms</a>
+        <a href="html/products.html">Products</a>
+        <a href="html/recipes.html">Recipes</a>
+        <a href="html/community.html">Community</a>
     </nav>
 
     <div id="slider-container">
